src/test/tuple_struct.stderr
error: custom attribute panicked
 --> src/test/tuple_struct.rs:3:1
  |
3 | #[strawberry_fields(u32)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: internal error: entered unreachable code: Macro should have checked that it isn't expanding for a tuple stuct, but did not.
