src/test/tuple_struct.rs
use strawberry_fields::strawberry_fields;

#[strawberry_fields(u32)]
struct Dummy(u32, u32);

fn main() {}
